support change sdk automatic support reimport maven automatic support open project automatic

--- a/demo/demo.ipynb
+++ b/demo/demo.ipynb
@@ -26,7 +26,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
+   "id": "a50bb959",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Project(name=realworld-mdd, containerState=COMPONENT_CREATED, componentStore=D:\\code\\realworld-mdd)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "openProjectByFolder(\"D:/code/realworld-mdd\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7af2741",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "project smart mode ready, project = [run_kotlin_kernel_idea]\n",
+      "ProjectInfoServiceImpl init\n",
+      "setCurrentProject, project = run_kotlin_kernel_idea\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Project(name=run_kotlin_kernel_idea, containerState=COMPONENT_CREATED, componentStore=D:\\code\\run_kotlin_kernel_idea)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m在当前单元格或上一个单元格中执行代码时 Kernel 崩溃。\n",
+      "\u001b[1;31m请查看单元格中的代码，以确定故障的可能原因。\n",
+      "\u001b[1;31m单击<a href='https://aka.ms/vscodeJupyterKernelCrash'>此处</a>了解详细信息。\n",
+      "\u001b[1;31m有关更多详细信息，请查看 Jupyter <a href='command:jupyter.viewOutput'>log</a>。"
+     ]
+    }
+   ],
+   "source": [
+    "openProjectByFolder(\"D:/code/run_kotlin_kernel_idea\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "a50c007f-51c4-4f4d-9e77-b15b74d2dd62",
    "metadata": {},
    "outputs": [
@@ -36,7 +98,7 @@
        "Project(name=realworld-mdd, containerState=COMPONENT_CREATED, componentStore=D:\\code\\realworld-mdd)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +110,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
+   "id": "dfb0a2cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "skykoma detected jdk skykoma-auto-17 from d:/lib/jdk-17\n",
+      "try add jdk d:/lib/jdk-17 already exists\n"
+     ]
+    }
+   ],
+   "source": [
+    "project?.updateJdk(\"d:/lib/jdk-17\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "53429981",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m在当前单元格或上一个单元格中执行代码时 Kernel 崩溃。\n",
+      "\u001b[1;31m请查看单元格中的代码，以确定故障的可能原因。\n",
+      "\u001b[1;31m单击<a href='https://aka.ms/vscodeJupyterKernelCrash'>此处</a>了解详细信息。\n",
+      "\u001b[1;31m有关更多详细信息，请查看 Jupyter <a href='command:jupyter.viewOutput'>log</a>。"
+     ]
+    }
+   ],
+   "source": [
+    "project?.mavenReImport()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "c4811171-abf5-4e68-b7c6-330ee2daac58",
    "metadata": {},
    "outputs": [
@@ -58,6 +161,7 @@
      "text": [
       "projectName:realworld-mdd, basePath:D:/code/realworld-mdd, projectDirName:realworld-mdd\n",
       "currentBranch:test, currentHash:fb5a492e25aeaac933e822beeb21dbf897dcaefa\n",
+      "projectSdk:d:/lib/jdk-17\n",
       "\n"
      ]
     }
@@ -68,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "19e178a7-ab22-4613-b3f0-4466e04f3416",
    "metadata": {
     "scrolled": true
@@ -80,7 +184,7 @@
        "[Project(name=realworld-mdd, containerState=COMPONENT_CREATED, componentStore=D:\\code\\realworld-mdd)]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
