support git4idea operators update demo

--- a/demo/demo.ipynb
+++ b/demo/demo.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "61221361-799d-418a-a118-407e72283a2d",
+   "metadata": {},
+   "source": [
+    "# 初始化"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b3327ea8-3a21-4507-bf37-5f7374cec6a2",
+   "id": "46fa4fcb-90e1-49d1-83c2-9fc0fbe7cc1e",
    "metadata": {},
    "outputs": [
     {
@@ -22,6 +30,42 @@
    "source": [
     "import cn.hylstudio.skykoma.plugin.idea.util.*\n",
     "println(\"succ\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb55b0ae-365d-49cc-a43b-31b3e91ebad7",
+   "metadata": {},
+   "source": [
+    "# 项目操作"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "19e178a7-ab22-4613-b3f0-4466e04f3416",
+   "metadata": {
+    "editable": true,
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Project(name=realworld-mdd, containerState=COMPONENT_CREATED, componentStore=D:\\code\\realworld-mdd)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getOpenedProjects()"
    ]
   },
   {
@@ -47,48 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b7af2741",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "project smart mode ready, project = [run_kotlin_kernel_idea]\n",
-      "ProjectInfoServiceImpl init\n",
-      "setCurrentProject, project = run_kotlin_kernel_idea\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Project(name=run_kotlin_kernel_idea, containerState=COMPONENT_CREATED, componentStore=D:\\code\\run_kotlin_kernel_idea)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m在当前单元格或上一个单元格中执行代码时 Kernel 崩溃。\n",
-      "\u001b[1;31m请查看单元格中的代码，以确定故障的可能原因。\n",
-      "\u001b[1;31m单击<a href='https://aka.ms/vscodeJupyterKernelCrash'>此处</a>了解详细信息。\n",
-      "\u001b[1;31m有关更多详细信息，请查看 Jupyter <a href='command:jupyter.viewOutput'>log</a>。"
-     ]
-    }
-   ],
-   "source": [
-    "openProjectByFolder(\"D:/code/run_kotlin_kernel_idea\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "a50c007f-51c4-4f4d-9e77-b15b74d2dd62",
    "metadata": {},
    "outputs": [
@@ -98,7 +101,7 @@
        "Project(name=realworld-mdd, containerState=COMPONENT_CREATED, componentStore=D:\\code\\realworld-mdd)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,135 +109,6 @@
    "source": [
     "var project = getCurrentProject()\n",
     "project"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "dfb0a2cd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "skykoma detected jdk skykoma-auto-17 from d:/lib/jdk-17\n",
-      "try add jdk d:/lib/jdk-17 already exists\n"
-     ]
-    }
-   ],
-   "source": [
-    "project?.updateJdk(\"d:/lib/jdk-17\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "53429981",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m在当前单元格或上一个单元格中执行代码时 Kernel 崩溃。\n",
-      "\u001b[1;31m请查看单元格中的代码，以确定故障的可能原因。\n",
-      "\u001b[1;31m单击<a href='https://aka.ms/vscodeJupyterKernelCrash'>此处</a>了解详细信息。\n",
-      "\u001b[1;31m有关更多详细信息，请查看 Jupyter <a href='command:jupyter.viewOutput'>log</a>。"
-     ]
-    }
-   ],
-   "source": [
-    "project?.mavenReImport()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "c4811171-abf5-4e68-b7c6-330ee2daac58",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "projectName:realworld-mdd, basePath:D:/code/realworld-mdd, projectDirName:realworld-mdd\n",
-      "currentBranch:test, currentHash:fb5a492e25aeaac933e822beeb21dbf897dcaefa\n",
-      "projectSdk:d:/lib/jdk-17\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "getCurrentProject()?.printInfo()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "19e178a7-ab22-4613-b3f0-4466e04f3416",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Project(name=realworld-mdd, containerState=COMPONENT_CREATED, componentStore=D:\\code\\realworld-mdd)]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "getOpenedProjects()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "82853b9d-ed35-4908-afc4-01a78ddb2aa7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[D:\\code\\realworld-mdd]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "var repos = project.repositoryManager.repositories\n",
-    "repos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "07780cf8-34a5-4057-b70f-98b6c4ae1071",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[refs/heads/test, refs/heads/dev, refs/heads/master]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "var repo = repos[0]\n",
-    "repo.branches.localBranches"
    ]
   },
   {
@@ -270,14 +144,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "e525b495-881b-4e67-8db1-ee110f19aa96",
+   "execution_count": 4,
+   "id": "c4811171-abf5-4e68-b7c6-330ee2daac58",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "projectName:realworld-mdd, basePath:D:/code/realworld-mdd, projectDirName:realworld-mdd\n",
+      "currentBranch:master, currentHash:fb5a492e25aeaac933e822beeb21dbf897dcaefa\n",
+      "projectSdk:d:/lib/jdk-17\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "getCurrentProject()?.printInfo()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b519a786-d6f1-493c-969f-fb1f00604597",
+   "metadata": {},
+   "source": [
+    "# SDK和maven操作"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "dfb0a2cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "project?.updateJdk(\"d:/lib/jdk-17\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "53429981",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "project?.mavenReImport()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "480622ef-cb72-46a7-8f69-274546fa0111",
+   "metadata": {},
+   "source": [
+    "# git操作"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "82853b9d-ed35-4908-afc4-01a78ddb2aa7",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[D:\\code\\realworld-mdd]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "var repos = project.repositoryManager.repositories\n",
+    "repos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "07780cf8-34a5-4057-b70f-98b6c4ae1071",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{}"
+       "GitRepoInfo{current=refs/heads/dev, remotes=[GitRemote{myName='origin', myUrls=[https://github.com/956237586/realworld-mdd.git], myPushUrls=[https://github.com/956237586/realworld-mdd.git], myFetchRefSpec='[+refs/heads/*:refs/remotes/origin/*]', myPushRefSpec='[]'}], localBranches={refs/heads/dev=fb5a492e25aeaac933e822beeb21dbf897dcaefa, refs/heads/master=fb5a492e25aeaac933e822beeb21dbf897dcaefa}, remoteBranches={refs/remotes/origin/master=fb5a492e25aeaac933e822beeb21dbf897dcaefa, refs/remotes/origin/dev=fb5a492e25aeaac933e822beeb21dbf897dcaefa}, trackInfos=[master->origin/master, dev->origin/dev], submodules=[], hooks=GitHooksInfo(areCommitHooksAvailable=false, isPrePushHookAvailable=false)}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "var repo = repos[0]\n",
+    "\n",
+    "repo.info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d8f359d3-2877-4238-afc4-421ef9987a95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "git4idea.branch.GitBranchesCollection@263e660d"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repo.branches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5343523c-b1e0-40ad-a6e7-d710cdfe34ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[refs/heads/dev, refs/heads/master]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repo.branches.localBranchesList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f7956694-9aa6-417b-9c37-1a592c93b741",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[refs/remotes/origin/master, refs/remotes/origin/dev]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repo.branches.remoteBranchesList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2a87b0cc-8b30-455f-acbc-1ca97c87ef55",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "refs/remotes/origin/master"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val master = repo.branches.remoteBranchesList[0]\n",
+    "master"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e3989c50-53d8-46e6-bc91-c9353a37d099",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "refs/remotes/origin/dev"
       ]
      },
      "execution_count": 7,
@@ -286,19 +349,20 @@
     }
    ],
    "source": [
-    "getCurrentProject()?.psiManager"
+    "val dev = repo.branches.remoteBranchesList[1]\n",
+    "dev"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "aa0f0410-481c-4169-8e4e-b5d0656fdab1",
+   "id": "970882e0-2d28-46ac-ab98-43d54a923db8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.intellij.openapi.fileEditor.impl.PsiAwareFileEditorManagerImpl@5d1cd85b"
+       "dev"
       ]
      },
      "execution_count": 8,
@@ -307,7 +371,102 @@
     }
    ],
    "source": [
-    "getCurrentProject()?.fileEditorManager"
+    "dev.nameForRemoteOperations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5ca7e7b5-b6b7-4f45-a3b6-9ef5c331d744",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "origin/dev"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dev.nameForLocalOperations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "bde4187d-f901-4955-af26-25f0cfd69c09",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "master.forceCheckout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0d8e2935-fa38-4b8d-a10f-fa5f609da059",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dev.forceCheckout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "328ccf96-f57a-4454-b2fe-b294cd9bddd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(On branch dev, )"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "execCmd(\"git -C ${project.basePath} status\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "a58173e8-4e40-4506-b076-a558817e0958",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Your branch is up to date with 'origin/master'., Switched to branch 'master')"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "execCmd(\"git -C ${project.basePath} checkout master\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "717ae63e-f004-4f85-a02e-8560332d9c52",
+   "metadata": {},
+   "source": [
+    "# module操作"
    ]
   },
   {
@@ -333,27 +492,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "b790f3c5-1cb2-483f-a4ae-e31c1bd2e3b9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "com.intellij.util.xml.impl.DomManagerImpl@2ddc591a"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "getCurrentProject()?.domManager"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "id": "76f7d3d7-b927-46dd-8b1e-63bfcfb70359",
    "metadata": {},
@@ -371,6 +509,33 @@
    ],
    "source": [
     "getCurrentProject()?.modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "25955748-8bb6-4934-9cb8-915d7b2ae943",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "moduleName:realworld\n",
+      "sourceRoots:[file://D:/code/realworld-mdd/src/main/java],testSrcRoots:[file://D:/code/realworld-mdd/src/test/java],resourceRoots:[file://D:/code/realworld-mdd/src/main/resources],testResourceRoots:[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "getCurrentProject()?.modules!![0].printInfo()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b7b915c-5670-4a78-a05f-66c5ec2eed9c",
+   "metadata": {},
+   "source": [
+    "# 文件操作"
    ]
   },
   {
@@ -423,29 +588,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "25955748-8bb6-4934-9cb8-915d7b2ae943",
+   "cell_type": "markdown",
+   "id": "bee3e344-94fb-432e-b80a-2da5b95f73f7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "moduleName:realworld\n",
-      "sourceRoots:[file://D:/code/realworld-mdd/src/main/java],testSrcRoots:[file://D:/code/realworld-mdd/src/test/java],resourceRoots:[file://D:/code/realworld-mdd/src/main/resources],testResourceRoots:[]\n"
-     ]
-    }
-   ],
    "source": [
-    "getCurrentProject()?.modules!![0].printInfo()"
+    "# DataContext操作"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
    "id": "c70143ab-8200-426e-bc09-d9ae21aa8941",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -787,6 +946,79 @@
    ],
    "source": [
     "testClass?.psiAnnotations!![0].attributes.map{it?.attributeValue?.parseValue()}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3b3f61d-1ab1-4021-95aa-b1dd128c9689",
+   "metadata": {},
+   "source": [
+    "# 其他各种manager"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e525b495-881b-4e67-8db1-ee110f19aa96",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getCurrentProject()?.psiManager"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "aa0f0410-481c-4169-8e4e-b5d0656fdab1",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "com.intellij.openapi.fileEditor.impl.PsiAwareFileEditorManagerImpl@5d1cd85b"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getCurrentProject()?.fileEditorManager"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b790f3c5-1cb2-483f-a4ae-e31c1bd2e3b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "com.intellij.util.xml.impl.DomManagerImpl@2ddc591a"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getCurrentProject()?.domManager"
    ]
   }
  ],
